--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-07-14  Sander van Dijk <sgvandijk@gmail.com>
+
+	* lib/kerosin/sceneserver/staticmesh.cpp
+	- Recalculate local bounding box after rescaling StaticMesh
+	
 2008-07-11  Hedayat Vatankhah  <hedayat@grad.com>
 
 	* plugin/soccer/gamestateaspect/gamestateaspect.h: 
