--- a/trunk/spark/doc/papers/2013/opensource.tex
+++ b/trunk/spark/doc/papers/2013/opensource.tex
@@ -5,7 +5,7 @@
 \begin{document}
 
 
-\title{SimSpark: Open Source Robot Soccer 3D Simulator}
+\title{SimSpark: An Open Source Robot Simulator Developed by RoboCup Community}
 
 \author{Yuan Xu\inst{1} \and Hedayat Vatankhah\inst{2}}
 
