* open-source-paper:   more hints

--- a/spark/doc/papers/2013/opensource.tex
+++ b/spark/doc/papers/2013/opensource.tex
@@ -52,10 +52,17 @@ Amirkabir University of Technology, Iran\\
 \maketitle
 
 \begin{abstract}
-  this is abstract
+  - current state of simspark
+  - changes 2013
+  - evidence of impact of the released component to the RoboCup community.
+  - technical contribution
+  - benefit for the RoboCup community.
 \end{abstract}
 
 \section{Introduction}
+The development on robots may be severely limited by the constrained resources.
+This is especially true in the research of multi-robots systems in areas such as RoboCup.
+Using simulation for algorithm development and testing makes thing easier.
 
 \todo[inline]{Background/histsory}
 \cite{Boedecker2008,OR05}
@@ -238,8 +245,10 @@ computed by \cref{eq:motor-power,eq:motor-temp} respectively. When the battery i
 \section{Applications}
 
 \paragraph{RoboCup simulation league (of course)}
+- some research?
+- roboviz
 
-\paragraph{research (used by teams have real robot)}
+\paragraph{Usage in real robot teams}
 - we (NaoTH) have shared common interface with NAO
 - FUmanoid
 - education
@@ -248,7 +257,7 @@ computed by \cref{eq:motor-power,eq:motor-temp} respectively. When the battery i
   \centering
   \includegraphics[width = 0.95\columnwidth]{simspark-spl}
   \caption{Prototype of the extended SimSpark for Standard Platform League.
-    It simulates a game in our lab. The bottom of screen are images of robot cameras.}
+    The bottom of screen are images of robot cameras.}
   \label{f:nao-models}
 \end{figure}
 
